--- a/META.yml
+++ b/META.yml
@@ -1,26 +1,29 @@
 ---
-name: POE-Component-IRC-Plugin-Validator-CSS
-version: 0.02
+abstract: 'non-blocking CSS validator'
 author:
   - 'Zoffix Znet <zoffix@cpan.org>'
-abstract: |-
-  non-blocking CSS validator
-  for IRC bots.
-license: perl
-resources:
-  license: http://dev.perl.org/licenses/
-requires:
-  Carp: 1.04
-  LWP::UserAgent: 2.036
-  POE::Component::IRC::Plugin: 0.09
-  POE::Component::WebService::Validator::CSS::W3C: 0.02
 build_requires:
   Test::More: 0
+configure_requires:
+  Module::Build: 0.4
+dynamic_config: 1
+generated_by: 'Module::Build version 0.4007, CPAN::Meta::Converter version 2.132830'
+license: perl
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: POE-Component-IRC-Plugin-Validator-CSS
 provides:
   POE::Component::IRC::Plugin::Validator::CSS:
     file: lib/POE/Component/IRC/Plugin/Validator/CSS.pm
-    version: 0.02
-generated_by: Module::Build version 0.2808
-meta-spec:
-  url: http://module-build.sourceforge.net/META-spec-v1.2.html
-  version: 1.2
+    version: 0.03
+requires:
+  Carp: 0
+  LWP::UserAgent: 0
+  POE: 0
+  POE::Component::IRC::Plugin: 0
+  POE::Component::WebService::Validator::CSS::W3C: 0.02
+  perl: 5.006
+resources:
+  license: http://dev.perl.org/licenses/
+version: 0.03
